force-app/main/default/objects/TMU_Transaction_Limit__c.object
<CustomObject>
    <label>金融交易額度</label>
    <nameField>
        <label>額度種類</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客戶</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>金融交易額度</relationshipLabel>
        <relationshipName>TMU_Transaction_Limit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility_Term__c</fullName>
        <label>額度期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Amount__c</fullName>
        <label>額度金額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facility_Balance__c</fullName>
        <label>剩餘可用額度</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utilized_Facility__c</fullName>
        <label>使用額度</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Private_Info__c</fullName>
        <label>客戶非公開資訊</label>
        <referenceTo>Account_Private_Info__c</referenceTo>
        <relationshipLabel>金融交易額度</relationshipLabel>
        <relationshipName>TMU_Transaction_Limit</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Utilized_Facility_Rate__c</fullName>
        <label>額度使用率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMU_Transaction_Limit_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>金融交易額度外鍵</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Facility_Term__c</columns>
        <columns>Facility_Amount__c</columns>
        <columns>Utilized_Facility__c</columns>
        <columns>Facility_Balance__c</columns>
        <columns>Utilized_Facility_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>